--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,25 @@
+aniso8601==8.1.0
+bcrypt==3.2.0
+blinker==1.4
+cffi==1.14.4
 click==7.1.2
+cryptography==3.3.1
 Flask==1.1.2
+Flask-Mail==0.9.1
+Flask-RESTful==0.3.8
+Flask-SQLAlchemy==2.4.4
+Flask-User==1.0.2.2
+Flask-WTF==0.14.3
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+pafy==0.5.5
+passlib==1.7.4
 psycopg2-binary==2.8.6
+pycparser==2.20
+pytz==2020.4
+six==1.15.0
+SQLAlchemy==1.3.22
+waitress==1.4.4
 Werkzeug==1.0.1
+WTForms==2.3.3
