--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cffi==1.14.4
 click==7.1.2
 cryptography==3.3.1
 Flask==1.1.2
+Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.4
